--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.READ_PROFILE"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:allowBackup="true"
@@ -38,10 +38,12 @@
         <activity android:name=".ui.submitQuestion" />
         <activity android:name=".ui.tappedQuestion" />
         <activity android:name=".ui.submitAnswer" />
+
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="0222be8c232649d16329c898ef499793100f85b9" />
-        <activity android:name=".ui.TimeLine"></activity>
+
+        <activity android:name=".ui.TimeLine" />
     </application>
 
 </manifest>
