Most recent version of Hudd3L.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     compile('com.twitter.sdk.android:twitter:1.13.0@aar') {
         transitive = true;
     }
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
